--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "wazuh",
   "version": "4.4.2",
   "revision": "00",
-  "stage": "release-candidate",
-  "commit": "fd994c8eb",
+  "stage": "stable",
+  "commit": "d36e05c11",
   "pluginPlatform": {
-    "version": "7.17.9"
+    "version": "7.17.5"
   },
   "description": "Wazuh app",
   "keywords": [
